--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,136 @@
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap");
 body {
-  background: #fdfdfd;
+  font-family: "Overpass", "Helvetica Neue", -apple-system, "Segoe UI", Verdana, sans-serif;
+}
+
+.caption {
+  font-size: 0.8em;
+  color: #333;
+  line-height: 1.2;
+}
+
+aside h5 {
+  font-size: 1.1em;
   margin: 0;
+}
+
+nav {
+  background: #d4af37;
+}
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 5px 0;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  display: flex;
+  font-weight: bold;
+  justify-content: space-evenly;
+}
+@media (max-width: 960px) {
+  nav ul {
+    font-size: 1em;
+  }
+}
+nav ul a {
+  color: white;
+  text-decoration: none;
+  display: block;
+  line-height: 0.9;
+  padding-bottom: 4px;
+  padding-top: 4px;
+  border-top: 2.5px solid transparent;
+  border-bottom: 2.5px solid transparent;
+}
+nav ul a:hover {
+  border-bottom: 2.5px solid white;
+}
+
+header {
+  background: #0190b1;
+  color: white;
+  text-align: center;
+}
+header h1 {
+  font-size: 3em;
+  margin: 0;
+}
+@media (max-width: 960px) {
+  header h1 {
+    font-size: 2em;
+  }
+}
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+body {
+  background: #dfdfdf;
+}
+@media (min-width: 961px) {
+  body {
+    max-width: 960px;
+    margin: 10px auto;
+  }
+}
+@media (max-width: 960px) {
+  body {
+    margin: 10px 5px;
+  }
 }
 
 #wrapper {
   padding: 10px;
   margin-top: 10px;
+}
+
+#content {
+  background: white;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+main, aside {
+  padding: 15px 15px 0 15px;
+}
+
+aside {
+  flex: 1;
+}
+@media (max-width: 960px) {
+  aside {
+    flex: 100%;
+    order: 2;
+  }
+}
+aside ul {
+  margin-top: 0;
+  padding: 0;
+  list-style: none;
+}
+
+main {
+  flex: 3;
+}
+@media (max-width: 960px) {
+  main {
+    flex: 100%;
+    order: 1;
+  }
+}
+@media (min-width: 961px) {
+  main {
+    border-left: 1px solid #dfdfdf;
+  }
+}
+main h2 {
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
 
 /*# sourceMappingURL=main.css.map */
