--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,11 @@ aside h5 {
   margin: 0;
 }
 
+main h2 {
+  margin: 0;
+  line-height: 1.2;
+}
+
 nav {
   background: #d4af37;
 }
@@ -123,9 +128,6 @@ main {
   main {
     border-left: 1px solid #dfdfdf;
   }
-}
-main h2 {
-  margin: 0;
 }
 
 img {
