--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,8 @@ header {
 header h1 {
   font-size: 3em;
   margin: 0;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 @media (max-width: 960px) {
   header h1 {
