--- a/css/_header.scss
+++ b/css/_header.scss
@@ -3,14 +3,15 @@
 header {
   background: $main-theme;
   color: white;
-  text-align: center;
+  display: flex;
+  justify-content: center;
   h1 {
     font-size: 3em;
     @media #{$small-screens} {
       font-size: 2em;
     }
-    margin: 0;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    line-height: 1;
   }
 }
