--- a/css/main.css
+++ b/css/main.css
@@ -54,13 +54,14 @@ nav ul a:hover {
 header {
   background: #0190b1;
   color: white;
-  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 header h1 {
   font-size: 3em;
-  margin: 0;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  line-height: 1;
 }
 @media (max-width: 960px) {
   header h1 {
