add management to sidebar

--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -11,9 +11,15 @@ body {
   line-height: 1.2;
 }
 
-aside h5 {
-  font-size: 1.1em;
-  margin: 0;
+aside {
+  h5 {
+    font-size: 1.1em;
+    margin: 0 0 6px 0;
+  }
+
+  li {
+    line-height: 1.5;
+  }
 }
 
 main {
