finish up index

--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,17 @@ header h1 {
   margin-bottom: 0;
 }
 
+footer {
+  background: #0190b1;
+  padding: 5px 0 2px 0;
+}
+footer p {
+  text-align: center;
+  display: block;
+  color: white;
+  margin: 0;
+}
+
 body {
   background: #dfdfdf;
 }
