--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,16 @@ main h2, main h4 {
   line-height: 1.2;
 }
 
+dl dt {
+  font-weight: bold;
+}
+dl dd {
+  margin-left: 0.5em;
+}
+dl dd:not(last-of-type) {
+  margin-bottom: 0.5em;
+}
+
 nav {
   background: #d4af37;
 }
