--- a/css/main.css
+++ b/css/main.css
@@ -200,4 +200,13 @@ img {
   color: white;
 }
 
+dl {
+  margin-top: 0.5em;
+}
+
+ul.no-style {
+  list-style: none;
+  padding-left: 0;
+}
+
 /*# sourceMappingURL=main.css.map */
