--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,15 @@ dl dd:not(last-of-type) {
   margin-bottom: 0.5em;
 }
 
+span.badge {
+  font-size: 0.9em;
+  padding: 0.2em 0.2em 0 0.2em;
+  border-radius: 2px;
+  background-color: #0190b1;
+  color: white;
+  line-height: 1;
+}
+
 nav {
   background: #d4af37;
 }
