--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,14 @@ span.badge {
   line-height: 1;
 }
 
+.small {
+  font-size: 0.9em;
+}
+
+.text-gray {
+  color: #333;
+}
+
 nav {
   background: #d4af37;
 }
@@ -140,6 +148,34 @@ footer p {
   margin: 0;
 }
 
+form fieldset {
+  border: 1px solid #dfdfdf;
+  border-radius: 2px;
+  margin: 0;
+}
+form label.required:after {
+  content: " *";
+  color: red;
+}
+form input[type=text], form textarea {
+  padding: 4px;
+  border-radius: 2px;
+  width: 100%;
+  box-sizing: border-box;
+  border: 1px solid #dfdfdf;
+}
+form button[type=submit] {
+  background-color: #0190b1;
+  color: white;
+  padding: 8px;
+  border-radius: 2px;
+  outline: none;
+  border: none;
+}
+form button[type=submit]:hover {
+  cursor: pointer;
+}
+
 body {
   background: #dfdfdf;
 }
@@ -221,6 +257,22 @@ ul.no-style {
 .sticky-top {
   position: sticky;
   top: 0;
+}
+
+.block {
+  display: block;
+}
+
+.mb-2 {
+  margin-bottom: 1em;
+}
+
+.mb-3 {
+  margin-bottom: 1.5em;
+}
+
+.mt-0 {
+  margin-top: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
