--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,7 @@
 @import "header";
 @import "utilities";
 @import "footer";
+@import "form";
 
 body {
   background: $light-gray;
@@ -76,4 +77,20 @@ ul.no-style {
 .sticky-top {
   position: sticky;
   top: 0;
+}
+
+.block {
+  display: block;
+}
+
+.mb-2 {
+  margin-bottom: 1em;
+}
+
+.mb-3 {
+  margin-bottom: 1.5em;
+}
+
+.mt-0 {
+  margin-top: 0;
 }
