--- a/css/_header.scss
+++ b/css/_header.scss
@@ -14,4 +14,14 @@ header {
     margin-bottom: 5px;
     line-height: 1;
   }
+  img {
+    max-height: 3em;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 1em;
+    @media #{$small-screens} {
+      max-height: 2em;
+      margin-right: 0.5em;
+    }
+  }
 }
