--- a/css/_utilities.scss
+++ b/css/_utilities.scss
@@ -1,3 +1,28 @@
 .mb-0 {
   margin-bottom: 0;
 }
+
+.mb-1 {
+  margin-bottom: 0.5em;
+}
+
+.sticky-top {
+  position: sticky;
+  top: 0;
+}
+
+.block {
+  display: block;
+}
+
+.mb-2 {
+  margin-bottom: 1em;
+}
+
+.mb-3 {
+  margin-bottom: 1.5em;
+}
+
+.mt-0 {
+  margin-top: 0;
+}
