--- a/css/main.css
+++ b/css/main.css
@@ -132,9 +132,46 @@ header h1 {
     font-size: 2em;
   }
 }
+header img {
+  max-height: 3em;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 1em;
+}
+@media (max-width: 960px) {
+  header img {
+    max-height: 2em;
+    margin-right: 0.5em;
+  }
+}
 
 .mb-0 {
   margin-bottom: 0;
+}
+
+.mb-1 {
+  margin-bottom: 0.5em;
+}
+
+.sticky-top {
+  position: sticky;
+  top: 0;
+}
+
+.block {
+  display: block;
+}
+
+.mb-2 {
+  margin-bottom: 1em;
+}
+
+.mb-3 {
+  margin-bottom: 1.5em;
+}
+
+.mt-0 {
+  margin-top: 0;
 }
 
 footer {
@@ -254,25 +291,19 @@ ul.no-style {
   padding-left: 0;
 }
 
-.sticky-top {
-  position: sticky;
-  top: 0;
+.alert {
+  background-color: lightcoral;
+  padding: 8px;
+  border-radius: 5px;
+  border: 1px solid #e52525;
+}
+.alert p {
+  margin-bottom: 0;
+  margin-top: 3px;
 }
 
-.block {
-  display: block;
-}
-
-.mb-2 {
-  margin-bottom: 1em;
-}
-
-.mb-3 {
-  margin-bottom: 1.5em;
-}
-
-.mt-0 {
-  margin-top: 0;
+a {
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=main.css.map */
