--- a/css/main.scss
+++ b/css/main.scss
@@ -74,23 +74,17 @@ ul.no-style {
   padding-left: 0;
 }
 
-.sticky-top {
-  position: sticky;
-  top: 0;
+.alert {
+  background-color: lightcoral;
+  p {
+    margin-bottom: 0;
+    margin-top: 3px;
+  }
+  padding: 8px;
+  border-radius: 5px;
+  border: 1px solid darken(lightcoral, 20%);
 }
 
-.block {
-  display: block;
-}
-
-.mb-2 {
-  margin-bottom: 1em;
-}
-
-.mb-3 {
-  margin-bottom: 1.5em;
-}
-
-.mt-0 {
-  margin-top: 0;
+a {
+  text-decoration: none;
 }
