--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 nav {
-  background: $secondary-theme;
+  background: $main-theme;
   ul.main-nav {
     list-style: none;
     margin: 0;
