--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@ body {
 }
 
 .caption {
-  font-size: 0.875em;
   color: #333;
   line-height: 1.2;
   margin-top: 8px;
@@ -44,6 +43,7 @@ span.badge {
 
 .small {
   font-size: 1em;
+  font-style: italic;
 }
 
 .text-gray {
