--- a/css/_header.scss
+++ b/css/_header.scss
@@ -15,6 +15,7 @@ header {
     line-height: 1;
   }
   img {
+    width: auto;
     max-height: 3em;
     margin-top: auto;
     margin-bottom: auto;
